Googleアナリティクスのタグ埋め込み

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,15 @@
 {% endblock %}
 
 {% block content %}
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7XD1SJJKG4"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-7XD1SJJKG4');
+</script>
 <div class="container">
     <h1 class="mb-4 text-primary">📘 作業ログフォーム</h1>
 
