--- a/templates/logout.html
+++ b/templates/logout.html
@@ -1,5 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7XD1SJJKG4"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-7XD1SJJKG4');
+</script>
 <div class="container mt-5 text-center">
   <h2>ログアウトしました</h2>
   <a href="{{ url_for('login') }}" class="btn btn-primary mt-3">ログイン画面へ戻る</a>
