--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,15 @@
 {% block title %}ログイン - 作業ログ{% endblock %}
 
 {% block content %}
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7XD1SJJKG4"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-7XD1SJJKG4');
+</script>
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-6">
