アカウントページ修正4

--- a/templates/account.html
+++ b/templates/account.html
@@ -155,7 +155,7 @@
                 <span class="info-label">最終ログイン:</span>
                 <span class="info-value">
                     {% if user_data.last_login %}
-                        {{ user_data.last_login.strftime('%Y年%m月%d日 %H:%M') }} (UTC)
+                        {{ user_data.last_login.strftime('%Y年%m月%d日 %H:%M') }}
                     {% else %}
                         未ログイン
                     {% endif %}
