アドセンス入れてみたVer

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,8 @@
 
     gtag('config', 'G-7XD1SJJKG4');
 </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6776937804177103"
+     crossorigin="anonymous"></script>
 <div class="container">
     <h1 class="mb-4 text-primary">📘 作業ログフォーム</h1>
 
