--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,8 @@
 
         gtag('config', 'G-7XD1SJJKG4');
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6776937804177103"
+     crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}作業ログ{% endblock %}</title>
