--- a/templates/tags_top.html
+++ b/templates/tags_top.html
@@ -12,6 +12,8 @@
 
     gtag('config', 'G-7XD1SJJKG4');
 </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6776937804177103"
+     crossorigin="anonymous"></script>
 <style>
     .tag-card {
         transition: all 0.3s ease;
